@@ -5,8 +5,9 @@
 	Report in http://savannah.gnu.org/bugs/?38380.
 	* tp/Makefile.am, tp/maintain/*: modularize and rename scripts
 	associated to standalone modules handling.
-	* tp/Convert/Plaintext.pm: use OPEN_QUOTE_SYMBOL and 
+	* tp/Texinfo/Convert/Plaintext.pm: use OPEN_QUOTE_SYMBOL and 
 	CLOSE_QUOTE_SYMBOL.
+	* tp/Texinfo/Parser.pm: allow more characters in flags.
 
 2013-02-22  Karl Berry  <karl@gnu.org>
 
